# scAllele

./: ._README.md  ._pyproject.toml  ._setup.cfg  LICENSE  README.md  requires.txt  scAllele-0.0.9.2-py3-none-any.whl  sea.feature_matrix.tab  sea.read_cluster_info.tab  see  setup.cfg  tmp.sh
Manuscript/: FIG2.html  FIG3.html  FIG4.html  FIG5.html  FIG_S4.html  Training.html
data/: README.md  gm12878.chr21.bam  gm12878.chr21.bam.bai
src/scAllele/: ._gqv_bam_utils.py  ._gqv_dbg_utils.py  ._gqv_glm.py  ._gqv_mutual_information.py  ._gqv_software_management.py  ._gqv_utils.py  ._gqv_vartool.py  ._scAllele.old.py  ._scAllele.py  .nfs807c301700c873a900002533  gqv.py  gqv_bam_utils.py  gqv_dbg_utils.py  gqv_glm.py  gqv_mutual_information.py  gqv_software_management.py  gqv_utils.py  gqv_vartool.py  scAllele.py
src/scAllele.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/scAllele/glm/: GM12878_smartseq2.all.feature_matrix.tab.DELETION.glm.pickle  GM12878_smartseq2.all.feature_matrix.tab.INSERTION.glm.pickle  GM12878_smartseq2.all.feature_matrix.tab.SNV.glm.pickle  smartseq2_gm12878_DS.txt.DELETION.glm.pickle  smartseq2_gm12878_DS.txt.INSERTION.glm.pickle  smartseq2_gm12878_DS.txt.SNP.glm.pickle
testdata/: sea.intronic_parts.bed  sea.mi_summary.tab  sea.read_cluster_info.tab  sea.vcf
