[metadata]
name = scAllele
version = 0.0.9.7
author = Giovanni Quinones Valdez
author_email = giovas@ucla.edu
description = A versatile tool for the detection and analysis of nucleotide variants in scRNA-seq
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gxiaolab/scAllele
project_urls =
    Bug Tracker = https://github.com/gxiaolab/scAllele/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires = 
    biopython>=1.8.5
    glob2
    HTSeq
    multiprocess
    networkx>=2.4
    numpy
    pandas>=1.3
    pickleshare
    psutil
    pyfaidx>=0.5.9.5
    pysam>=0.9.1
    vcfpy
    scikit-learn>=0.23.1
    scipy>=1.15.1
    statsmodels>=0.11.1


[options.package_data]
* = *.pickle 

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    scAllele = scAllele.scAllele:main
    scAllele_train = scAllele.gqv_glm:main
